--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 
     <div class="container">
         <div class="card">
-            <img src="img-1.jpeg" alt="Image 1">
+            <img src="insta-png.jpeg" alt="Image 1">
             <a href="https://www.instagram.com/itz_aman935/" target="_blank" class="card" style=""><h2>Instagram</h2></a>
             <p>check out my insta profile </p>
         </div>
         <div class="card">
-            <img src="img-2.jpeg" alt="Image 2">
-            <a href="https://www.instagram.com/itz_aman935/" target="_blank" class="card" style=""><h2>Linkedin</h2></a>
+            <img src="linkedin-png.jpeg" alt="Image 2">
+            <a href="https://www.linkedin.com/in/aman-sharma-352374242/" target="_blank" class="card" style=""><h2>Linkedin</h2></a>
             <p>check out my Linkedin profile </p>
         </div>
         <div class="card">
-            <img src="img-3.jpeg" alt="Image 3">
-            <a href="https://www.instagram.com/itz_aman935/" target="_blank" class="card" style=""><h2>Github</h2></a>
+            <img src="github-png.jpeg" alt="Image 3">
+            <a href="https://github.com/amankumar26" target="_blank" class="card" style=""><h2>Github</h2></a>
             <p>check out my Github profile </p>
         </div>
     
